# aspect_code

./: LICENSE.txt  README.md  environment.yml  mpi_landlab_old_workflow.py  pyproject.toml  test.sh
.github/workflows/: lint.yml  linux_conda  linux_conda.yml  linux_conda.yml.disabled  linux_dev_landlab.yml  linux_dev_landlab_large_grid.yml  linux_dev_landlab_uv.yml  linux_uv.yml  linux_uv.yml.disabled
example_visualization_files/: solution-00000.0000.vtu  solution-00000.0001.vtu  solution-00000.pvtu  solution.pvd
experiment/: compare_elevation.py  debug_error.py  debug_links_not_connected.py  identify_hollow_nodes.py  remove_extra_links_vor_hex.py  remove_extra_links_vor_subgrid.py  test_vor_graph.py
grid_partition/: partition_corner.py  partition_node.py
mpi_landlab/: check_mass_balance.py  grid_utils.py  mpi_landlab.py  mpi_landlab3.py  mpi_landlab_linear_diffusion.py  mpi_landlab_mass_balance.py  mpi_landlab_perimeter.py  mpi_landlab_simple_function.py  plot_utils.py  validate_submarine_mpi_2.py
mpi_landlab/old_workflows/: mpi_landlab_old_workflow.py  mpi_landlab_old_workflow_refine.py  mpi_landlab_perimeter.py  validate_submarine_mpi_2.py
visualization/: create_vtu_example.py  visualization.py
visualization/pvtu_vtu/: global_1.pvtu  global_2.pvtu  global_3.pvtu  rank0_1.vtu  rank0_2.vtu  rank0_3.vtu  rank1_1.vtu  rank1_2.vtu  rank1_3.vtu  rank2_1.vtu  rank2_2.vtu  rank2_3.vtu  rank3_1.vtu  rank3_2.vtu  rank3_3.vtu  simulation.pvd
