[project]
name = "aspect-code"
version = "0.1.0"
description = "Example of landlab parallel workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy==1.16.0",
    "landlab==2.9.2",
    "mpi4py",
    "pymetis>=2025.2.1",
    "meshio>=5.3.5",
    "landlab_parallel==0.1.0",
]
